--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -30,13 +30,15 @@
 }
 
 .promo__title {
-  padding: 25px 35px;
+  padding: 25px 30px;
   margin: 0;
   text-align: center;
   font-family: "Oswald", sans-serif;
   font-size: 36px;
   line-height: 36px;
   color: #ffffff;
+  margin-top: 2px;
+  margin-left: 3px;
 }
 
 .promo__slogan {
@@ -53,11 +55,11 @@
 .promo__production {
   position: absolute;
   top: 165px;
-  left: -5px;
+  left: 0;
 }
 
 .promo__button {
-  margin-top: 150px;
+  margin-top: 136px;
   width: 280px;
   height: 40px;
   border: none;
@@ -86,15 +88,20 @@
   .promo__title {
     color: #000000;
     text-align: left;
+    font-weight: 400;
     font-size: 60px;
     line-height: 60px;
     padding: 60px 0 40px 0;
+    margin-left: -45px;
   }
 
   .promo__slogan {
     color: #000000;
     text-align: left;
     padding: 0;
+    font-size: 20px;
+    line-height: 20px;
+    margin-left: -45px;
   }
 
   .promo__background {
@@ -118,8 +125,8 @@
 
   .promo__button {
     position: absolute;
-    top: 285px;
-    left: 65px;
+    top: 291px;
+    left: 91px;
     margin-top: 0;
     width: 244px;
     height: 54px;
@@ -141,12 +148,21 @@
   }
 
   .promo__production {
+    margin-left: 10px;
+    margin-top: 5px;
     width: 552px;
     height: 499px;
   }
 
   .promo__title {
     padding: 0 0 40px 0;
+    margin-top: -134px;
+    margin-left: 81px;
+    width: 430px;
+  }
+
+  .promo__slogan {
+    margin-left: 82px;
   }
 
   .promo__background {
@@ -159,17 +175,6 @@
     right: 0;
     z-index: -1;
     background-repeat: no-repeat;
-
-    &::before {
-      content: "";
-      position: absolute;
-      height: 694px;
-      width: 300px;
-      background-color: #5eaa2f;
-      top: 0;
-      z-index: -3;
-      left: -220px;
-    }
 
     @media (min-resolution: 2dppx) {
       background-image: url("../img/index/index-background-desktop@2x.jpg");
@@ -187,8 +192,8 @@
 
   .promo__button {
     position: absolute;
-    top: 360px;
-    left: 100px;
+    top: 319px;
+    left: 182px;
     margin-top: 0;
   }
 }
