Улучшение скорости загрузки

--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -1,5 +1,5 @@
 .catalog__title {
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Tahoma", sans-serif;
   font-size: 36px;
   line-height: 36px;
   margin: 0;
@@ -46,7 +46,7 @@
 }
 
 .catalog__title-card {
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Tahoma", sans-serif;
   font-size: 16px;
   line-height: 20px;
   margin: 0;
@@ -126,7 +126,7 @@
   background-color: #68b738;
   color: #ffffff;
   border: none;
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Tahoma", sans-serif;
   font-size: 16px;
   line-height: 20px;
   text-transform: uppercase;
@@ -179,7 +179,7 @@
 
 .catalog__show-product {
   text-transform: uppercase;
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Tahoma", sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 20px;
@@ -198,7 +198,7 @@
   height: 40px;
   background-color: #f2f2f2;
   border: none;
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Tahoma", sans-serif;
   font-size: 16px;
   line-height: 20px;
   text-transform: uppercase;
