--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -14,7 +14,7 @@
 
 .example__title {
   padding-top: 25px;
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Tahoma", sans-serif;
   font-size: 36px;
   line-height: 40px;
   margin: 0;
@@ -22,7 +22,7 @@
 }
 
 .example__quantity {
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Tahoma", sans-serif;
   font-size: 24px;
   line-height: 24px;
   text-transform: uppercase;
@@ -41,7 +41,7 @@
 }
 
 .example__price {
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Tahoma", sans-serif;
   font-size: 14px;
   line-height: 20px;
   margin: 0;
@@ -49,7 +49,7 @@
 }
 
 .example__quantity-description {
-  font-family: "Lato", sans-serif;
+  font-family: "Lato", "Tahoma", sans-serif;
   font-size: 12px;
   line-height: 100%;
   margin: 0;
