--- a/source/less/blocks/program-selection.less
+++ b/source/less/blocks/program-selection.less
@@ -1,5 +1,5 @@
 .program-selection {
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Tahoma", sans-serif;
   font-size: 16px;
   line-height: 18px;
   margin-bottom: 31px;
@@ -32,7 +32,7 @@
 
 .program-selection__program-type-title {
   display: block;
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Tahoma", sans-serif;
   font-size: 16px;
   line-height: 18px;
   text-transform: uppercase;
@@ -54,7 +54,7 @@
 }
 
 .program-selection__user-value::placeholder {
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Tahoma", sans-serif;
   font-size: 16px;
   line-height: 18px;
   text-transform: uppercase;
@@ -89,7 +89,7 @@
 }
 
 .program-selection__contact-title {
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Tahoma", sans-serif;
   font-size: 24px;
   line-height: 26px;
   margin-bottom: 35px;
@@ -120,7 +120,7 @@
 }
 
 .program-selection__contact-label {
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Tahoma", sans-serif;
   font-size: 16px;
   line-height: 18px;
   text-transform: uppercase;
@@ -128,7 +128,7 @@
 }
 
 .program-selection__contact-value {
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Tahoma", sans-serif;
   font-size: 16px;
   line-height: 18px;
   text-transform: uppercase;
@@ -156,7 +156,7 @@
 
 .program-selection__comment-title {
   margin: 0;
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Tahoma", sans-serif;
   font-size: 24px;
   line-height: 26px;
   margin-bottom: 37px;
@@ -176,7 +176,7 @@
 .program-selection__comment-value {
   width: 249px;
   height: 130px;
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Tahoma", sans-serif;
   font-size: 16px;
   line-height: 18px;
   text-transform: uppercase;
@@ -186,7 +186,7 @@
 }
 
 .program-selection__additionally-title {
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Tahoma", sans-serif;
   font-size: 24px;
   line-height: 26px;
   position: relative;
@@ -205,7 +205,7 @@
 }
 
 .program-selection__additionally-name {
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Tahoma", sans-serif;
   font-size: 16px;
   line-height: 18px;
   text-transform: uppercase;
@@ -213,7 +213,7 @@
 }
 
 .program-selection__request {
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Tahoma", sans-serif;
   font-size: 16px;
   line-height: 20px;
   text-transform: uppercase;
@@ -235,7 +235,7 @@
 }
 
 .program-selection__required-fields {
-  font-family: "Lato", sans-serif;
+  font-family: "Lato", "Tahoma", sans-serif;
   font-size: 14px;
   line-height: 16px;
   text-align: center;
