--- a/source/less/blocks/additional-goods.less
+++ b/source/less/blocks/additional-goods.less
@@ -10,7 +10,7 @@
 }
 
 .additional-goods__title {
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Tahoma", sans-serif;
   font-size: 24px;
   line-height: 24px;
   position: relative;
@@ -40,7 +40,7 @@
 }
 
 .additional-goods__card-title {
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Tahoma", sans-serif;
   font-size: 16px;
   line-height: 16px;
   text-transform: uppercase;
@@ -124,7 +124,7 @@
   background-color: #68b738;
   color: #ffffff;
   border: none;
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Tahoma", sans-serif;
   font-size: 16px;
   line-height: 20px;
   text-transform: uppercase;
