--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -1,5 +1,5 @@
 .contacts__cooperation {
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Tahoma", sans-serif;
   font-size: 16px;
   line-height: 20px;
   text-transform: uppercase;
@@ -12,7 +12,7 @@
 
 .contacts__address {
   width: 139px;
-  font-family: "Lato", sans-serif;
+  font-family: "Lato", "Tahoma", sans-serif;
   font-weight: normal;
   font-size: 14px;
   line-height: 20px;
