--- a/source/less/blocks/how-it-works.less
+++ b/source/less/blocks/how-it-works.less
@@ -29,7 +29,7 @@
 }
 
 .how-it-works__title {
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Tahoma", sans-serif;
   font-size: 36px;
   line-height: 40px;
   margin: 0;
@@ -101,7 +101,7 @@
   .how-it-works__number {
     display: block;
     position: absolute;
-    font-family: "Oswald", sans-serif;
+    font-family: "Oswald", "Tahoma", sans-serif;
     font-size: 280px;
     line-height: 280px;
     color: #f2f2f2;
