--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -33,7 +33,7 @@
   padding: 25px 30px;
   margin: 0;
   text-align: center;
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Tahoma", sans-serif;
   font-size: 36px;
   line-height: 36px;
   color: #ffffff;
@@ -45,7 +45,7 @@
   padding: 0 60px;
   margin: 0;
   text-align: center;
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Tahoma", sans-serif;
   font-size: 14px;
   line-height: 14px;
   color: #ffffff;
@@ -64,7 +64,7 @@
   height: 40px;
   border: none;
   background: #68b738;
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Tahoma", sans-serif;
   font-size: 14px;
   line-height: 18px;
   color: #ffffff;
