--- a/source/less/blocks/type-program.less
+++ b/source/less/blocks/type-program.less
@@ -44,7 +44,7 @@
 }
 
 .type-program__title {
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Tahoma", sans-serif;
   font-size: 24px;
   line-height: 37px;
   margin: 0;
@@ -55,7 +55,7 @@
 }
 
 .type-program__transition-catalog {
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Tahoma", sans-serif;
   font-size: 16px;
   line-height: 16px;
   margin-left: 19px;
