--- a/source/less/style.less
+++ b/source/less/style.less
@@ -27,7 +27,7 @@
 }
 
 body {
-  font-family: "Lato", sans-serif;
+  font-family: "Lato", "Tahoma", sans-serif;
   font-size: 14px;
   line-height: 18px;
 }
