--- a/source/less/blocks/type-program.less
+++ b/source/less/blocks/type-program.less
@@ -129,6 +129,7 @@
     height: 372px;
     margin-top: -2px;
     padding-bottom: 0;
+    margin-left: 14px;
   }
 
   .type-program__item:not(:first-child) {
@@ -194,9 +195,10 @@
 
   .type-program__title {
     position: static;
+    font-weight: 400;
     font-size: 36px;
     line-height: 36px;
-    margin-top: 77px;
+    margin-top: 76px;
     margin-left: 53px;
     margin-bottom: 23px;
   }
