--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -41,6 +41,7 @@
   height: 362px;
   background: url("../img/index/map.png") no-repeat center;
   background-size: cover;
+  margin-left: -8px;
 
   @media (min-resolution: 2dppx) {
     background-image: url("../img/index/map@2x.png");
