--- a/source/less/blocks/main-header.less
+++ b/source/less/blocks/main-header.less
@@ -3,6 +3,7 @@
   flex-direction: column;
   align-items: center;
   width: 280px;
+  height: 58px;
 }
 
 .main-header__logo {
@@ -19,15 +20,15 @@
 
 .main-header__logo-image {
   margin-top: 2px;
-  margin-left: -86px;
+  margin-left: -90px;
 }
 
 .main-header__logo-text {
   margin-bottom: 7px;
-  margin-left: 54px;
+  margin-left: 51px;
 }
 
-.main-nav__list {
+.main-header__nav-list {
   display: flex;
   flex-direction: column;
   list-style-type: none;
@@ -35,11 +36,15 @@
   margin: 0;
 }
 
-.main-nav {
+.main-header__nav--nojs .main-header__nav-toggle {
+  display: none;
+}
+
+.main-header__nav {
   position: relative;
 }
 
-.main-nav__toggle {
+.main-header__nav-toggle {
   position: absolute;
   top: -37px;
   right: -151px;
@@ -52,7 +57,7 @@
   border: none;
 }
 
-.main-nav--closed .main-nav__toggle::before {
+.main-header__nav--closed .main-header__nav-toggle::before {
   content: "";
   position: absolute;
   top: 7px;
@@ -63,16 +68,16 @@
   box-shadow: 0 8px 0 0 #000000, 0 16px 0 0 #000000;
 }
 
-.main-nav--closed .main-nav__toggle:active::before {
+.main-header__nav--closed .main-header__nav-toggle:active::before {
   background-color: fade(#000000, 30%);
   box-shadow:
     0 8px 0 0 fade(#000000, 30%),
     0 16px 0 0 fade(#000000, 30%);
 }
 
-.main-nav--opened .main-nav__toggle {
-  top: -40px;
-  right: -40px;
+.main-header__nav--opened .main-header__nav-toggle {
+  top: -37px;
+  right: -148px;
 
   &::before,
   &::after {
@@ -100,27 +105,33 @@
   }
 }
 
-.main-nav__wrapper {
+.main-header__nav-wrapper {
+  position: absolute;
   margin-top: 15px;
+  top: -1px;
+  left: -160px;
+  width: 320px;
+  background-color: #ffffff;
+  z-index: 3;
 }
 
-.main-nav__link {
+.main-header__nav-link {
   font-family: "Oswald", "Tahoma", sans-serif;
   font-weight: 500;
-  font-size: 20px;
+  font-size: 21px;
   line-height: 20px;
   text-decoration: none;
   color: #000000;
   position: relative;
   display: block;
   text-align: center;
-  padding: 22px 22px 24px 22px;
+  padding: 21px 23px 24px 22px;
   text-transform: uppercase;
   border-top: 1px solid #e6e6e6;
 }
 
 @media (max-width: @mobile-width-only) {
-  .main-nav--closed .main-nav__item {
+  .main-header__nav--closed .main-header__nav-item {
     display: none;
   }
 }
@@ -131,7 +142,7 @@
     margin-left: 0;
   }
 
-  .main-nav__toggle {
+  .main-header__nav-toggle {
     display: none;
   }
 
@@ -142,20 +153,20 @@
     width: 708px;
   }
 
-  .main-nav__list {
+  .main-header__nav-list {
     display: flex;
     flex-direction: row;
   }
 
-  .main-nav__item:not(:last-child) {
+  .main-header__nav-item:not(:last-child) {
     margin-right: 35px;
   }
 
-  .main-nav__item {
+  .main-header__nav-item {
     margin-top: -2px;
   }
 
-  .main-nav__link {
+  .main-header__nav-link {
     font-size: 18px;
     line-height: 24px;
     padding: 0;
@@ -174,15 +185,19 @@
     display: none;
   }
 
-  .main-nav__wrapper {
+  .main-header__nav-wrapper {
     margin-top: 0;
+    position: static;
+    width: 100%;
+    background-color: #ffffff00;
+    z-index: 3;
   }
 
-  .site-list__item--active {
+  .main-header__nav-item-index--active {
     position: relative;
   }
 
-  .site-list__item--active::before {
+  .main-header__nav-item-index--active::before {
     content: "";
     position: absolute;
     top: 30px;
@@ -192,11 +207,11 @@
     background-color: #68b738;
   }
 
-  .main-nav__item--active {
+  .main-header__nav-item--active {
     position: relative;
   }
 
-  .main-nav__item--active::before {
+  .main-header__nav-item--active::before {
     content: "";
     position: absolute;
     top: 29px;
@@ -214,7 +229,7 @@
     margin-top: 43px;
   }
 
-  .main-nav {
+  .main-header__nav {
     width: 480px;
   }
 
@@ -227,7 +242,7 @@
     margin-left: 20px;
   }
 
-  .main-nav__link {
+  .main-header__nav-link {
     color: #ffffff;
     padding: 0;
     border-top: none;
@@ -244,7 +259,7 @@
     }
   }
 
-  .main-nav__item--active::before {
+  .main-header__nav-item--active::before {
     content: "";
     position: absolute;
     top: 36px;
@@ -254,16 +269,16 @@
     background-color: #68b738;
   }
 
-  .main-nav__wrapper {
+  .main-header__nav-wrapper {
     margin-right: -104px;
     margin-top: 12px;
   }
 
-  .site-list__item--active {
+  .main-header__nav-item-index--active {
     position: relative;
   }
 
-  .site-list__item--active::before {
+  .main-header__nav-item-index--active::before {
     content: "";
     position: absolute;
     top: 35px;
@@ -273,7 +288,7 @@
     background-color: #ffffff;
   }
 
-  .main-nav__link-catalog {
+  .main-header__nav-link-catalog {
     color: #000000;
     position: relative;
   }
