--- a/source/less/style.less
+++ b/source/less/style.less
@@ -32,6 +32,11 @@ body {
   line-height: 18px;
 }
 
+footer {
+  background: #f2f2f2;
+  width: 100%;
+}
+
 .visually-hidden {
   position: absolute;
   width: 1px;
