--- a/source/less/blocks/how-it-works.less
+++ b/source/less/blocks/how-it-works.less
@@ -65,8 +65,8 @@
   .how-it-works__list {
     display: grid;
     grid-template-columns: 280px 280px;
-    gap: 113px 104px;
-    margin-bottom: 99px;
+    gap: 90px 103px;
+    margin-bottom: 73px;
   }
 
   .how-it-works__image {
@@ -78,6 +78,7 @@
     display: flex;
     flex-direction: column;
     position: relative;
+    margin-left: -14px;
   }
 
   .how-it-works__title {
@@ -85,10 +86,11 @@
     line-height: 60px;
     margin-top: 43px;
     margin-bottom: 72px;
+    margin-left: -14px;
   }
 
   .how-it-works__description {
-    width: 250px;
+    width: 208px;
     margin-left: 0;
     margin-top: 31px;
     position: relative;
