--- a/source/less/blocks/main-header.less
+++ b/source/less/blocks/main-header.less
@@ -3,7 +3,6 @@
   flex-direction: column;
   align-items: center;
   width: 280px;
-  height: 58px;
 }
 
 .main-header__logo {
@@ -20,15 +19,15 @@
 
 .main-header__logo-image {
   margin-top: 2px;
-  margin-left: -90px;
+  margin-left: -86px;
 }
 
 .main-header__logo-text {
   margin-bottom: 7px;
-  margin-left: 51px;
+  margin-left: 54px;
 }
 
-.main-header__nav-list {
+.main-nav__list {
   display: flex;
   flex-direction: column;
   list-style-type: none;
@@ -36,15 +35,11 @@
   margin: 0;
 }
 
-.main-header__nav--nojs .main-header__nav-toggle {
-  display: none;
-}
-
-.main-header__nav {
+.main-nav {
   position: relative;
 }
 
-.main-header__nav-toggle {
+.main-nav__toggle {
   position: absolute;
   top: -37px;
   right: -151px;
@@ -57,7 +52,7 @@
   border: none;
 }
 
-.main-header__nav--closed .main-header__nav-toggle::before {
+.main-nav--closed .main-nav__toggle::before {
   content: "";
   position: absolute;
   top: 7px;
@@ -68,16 +63,16 @@
   box-shadow: 0 8px 0 0 #000000, 0 16px 0 0 #000000;
 }
 
-.main-header__nav--closed .main-header__nav-toggle:active::before {
+.main-nav--closed .main-nav__toggle:active::before {
   background-color: fade(#000000, 30%);
   box-shadow:
     0 8px 0 0 fade(#000000, 30%),
     0 16px 0 0 fade(#000000, 30%);
 }
 
-.main-header__nav--opened .main-header__nav-toggle {
-  top: -37px;
-  right: -148px;
+.main-nav--opened .main-nav__toggle {
+  top: -40px;
+  right: -40px;
 
   &::before,
   &::after {
@@ -105,33 +100,27 @@
   }
 }
 
-.main-header__nav-wrapper {
-  position: absolute;
+.main-nav__wrapper {
   margin-top: 15px;
-  top: -1px;
-  left: -160px;
-  width: 320px;
-  background-color: #ffffff;
-  z-index: 3;
 }
 
-.main-header__nav-link {
+.main-nav__link {
   font-family: "Oswald", "Tahoma", sans-serif;
   font-weight: 500;
-  font-size: 21px;
+  font-size: 20px;
   line-height: 20px;
   text-decoration: none;
   color: #000000;
   position: relative;
   display: block;
   text-align: center;
-  padding: 21px 23px 24px 22px;
+  padding: 22px 22px 24px 22px;
   text-transform: uppercase;
   border-top: 1px solid #e6e6e6;
 }
 
 @media (max-width: @mobile-width-only) {
-  .main-header__nav--closed .main-header__nav-item {
+  .main-nav--closed .main-nav__item {
     display: none;
   }
 }
@@ -142,7 +131,7 @@
     margin-left: 0;
   }
 
-  .main-header__nav-toggle {
+  .main-nav__toggle {
     display: none;
   }
 
@@ -153,20 +142,20 @@
     width: 708px;
   }
 
-  .main-header__nav-list {
+  .main-nav__list {
     display: flex;
     flex-direction: row;
   }
 
-  .main-header__nav-item:not(:last-child) {
+  .main-nav__item:not(:last-child) {
     margin-right: 35px;
   }
 
-  .main-header__nav-item {
+  .main-nav__item {
     margin-top: -2px;
   }
 
-  .main-header__nav-link {
+  .main-nav__link {
     font-size: 18px;
     line-height: 24px;
     padding: 0;
@@ -185,19 +174,15 @@
     display: none;
   }
 
-  .main-header__nav-wrapper {
+  .main-nav__wrapper {
     margin-top: 0;
-    position: static;
-    width: 100%;
-    background-color: #ffffff00;
-    z-index: 3;
   }
 
-  .main-header__nav-item-index--active {
+  .site-list__item--active {
     position: relative;
   }
 
-  .main-header__nav-item-index--active::before {
+  .site-list__item--active::before {
     content: "";
     position: absolute;
     top: 30px;
@@ -207,11 +192,11 @@
     background-color: #68b738;
   }
 
-  .main-header__nav-item--active {
+  .main-nav__item--active {
     position: relative;
   }
 
-  .main-header__nav-item--active::before {
+  .main-nav__item--active::before {
     content: "";
     position: absolute;
     top: 29px;
@@ -229,7 +214,7 @@
     margin-top: 43px;
   }
 
-  .main-header__nav {
+  .main-nav {
     width: 480px;
   }
 
@@ -242,7 +227,7 @@
     margin-left: 20px;
   }
 
-  .main-header__nav-link {
+  .main-nav__link {
     color: #ffffff;
     padding: 0;
     border-top: none;
@@ -259,7 +244,7 @@
     }
   }
 
-  .main-header__nav-item--active::before {
+  .main-nav__item--active::before {
     content: "";
     position: absolute;
     top: 36px;
@@ -269,16 +254,16 @@
     background-color: #68b738;
   }
 
-  .main-header__nav-wrapper {
+  .main-nav__wrapper {
     margin-right: -104px;
     margin-top: 12px;
   }
 
-  .main-header__nav-item-index--active {
+  .site-list__item--active {
     position: relative;
   }
 
-  .main-header__nav-item-index--active::before {
+  .site-list__item--active::before {
     content: "";
     position: absolute;
     top: 35px;
@@ -288,7 +273,7 @@
     background-color: #ffffff;
   }
 
-  .main-header__nav-link-catalog {
+  .main-nav__link-catalog {
     color: #000000;
     position: relative;
   }
