--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -70,6 +70,8 @@
   color: #ffffff;
   text-transform: uppercase;
   cursor: pointer;
+  text-decoration: none;
+  display: flex;
 
   &:hover {
     background-color: #5eaa2f;
@@ -78,6 +80,10 @@
   &:active .promo__button-text {
     opacity: 0.6;
   }
+}
+
+.promo__button-text {
+  margin: auto;
 }
 
 @media (min-width: @tablet-width) {
@@ -195,5 +201,26 @@
     top: 319px;
     left: 182px;
     margin-top: 0;
+  }
+
+  .promo__background-image {
+    position: absolute;
+    height: 693px;
+    width: 50%;
+    top: 0;
+    left: 50%;
+    background-color: #68b738;
+    opacity: 0.85;
+    z-index: -1;
+  }
+
+  .promo__background-base {
+    position: absolute;
+    height: 693px;
+    width: 50%;
+    top: 0;
+    left: 50%;
+    background-color: #2d5c10;
+    z-index: -2;
   }
 }
