--- a/source/less/blocks/type-program.less
+++ b/source/less/blocks/type-program.less
@@ -213,12 +213,9 @@
 }
 
 @media (min-width: @desktop-width) {
-  .type-program__wrapper {
-    margin-left: 0;
-  }
-
   .type-program__list {
     display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
   }
 
@@ -234,7 +231,7 @@
   }
 
   .type-program__item:not(:last-child) {
-    margin-right: 80px;
+    margin-right: 66px;
   }
 
   .type-program__image {
