--- a/source/less/blocks/additional-goods.less
+++ b/source/less/blocks/additional-goods.less
@@ -13,6 +13,7 @@
   font-family: "Oswald", "Tahoma", sans-serif;
   font-size: 24px;
   line-height: 24px;
+  font-weight: 400;
   position: relative;
   margin: 0;
   margin-top: 10px;
@@ -31,10 +32,10 @@
   &::before {
     content: "";
     position: absolute;
-    width: 53px;
+    width: 100%;
     height: 2px;
     background-color: #68b738;
-    right: -20px;
+    right: -247px;
     top: 16px;
   }
 }
@@ -43,8 +44,10 @@
   font-family: "Oswald", "Tahoma", sans-serif;
   font-size: 16px;
   line-height: 16px;
+  font-weight: 400;
   text-transform: uppercase;
   margin-bottom: 3px;
+  color: #222222;
 }
 
 .additional-goods__gift {
@@ -111,6 +114,7 @@
   display: flex;
   justify-content: space-between;
   line-height: 14px;
+  color: #444444;
 }
 
 .additional-goods__list {
@@ -156,20 +160,20 @@
     &::after {
       content: "";
       position: absolute;
-      width: 53px;
+      width: 100%;
       height: 2px;
       background-color: #68b738;
-      left: -90px;
+      left: -746px;
       top: 21px;
     }
 
     &::before {
       content: "";
       position: absolute;
-      width: 328px;
+      width: 100%;
       height: 2px;
       background-color: #68b738;
-      right: 6px;
+      right: -373px;
       top: 21px;
     }
   }
@@ -190,7 +194,7 @@
   }
 
   .additional-goods__gift {
-    background: url("../img/catalog/background-tablet.png") no-repeat;
+    background: url("../img/catalog/background-tablet.jpg") no-repeat;
     width: 707px;
     height: 200px;
     flex-direction: row;
@@ -315,13 +319,11 @@
     margin-bottom: 90px;
 
     &::before {
-      width: 957px;
-      right: -110px;
       top: 22px;
     }
 
     &::after {
-      left: -92px;
+      left: -1260px;
       top: 22px;
     }
   }
