--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -2,6 +2,7 @@
   font-family: "Oswald", "Tahoma", sans-serif;
   font-size: 36px;
   line-height: 36px;
+  font-weight: 400;
   margin: 0;
   margin-top: 27px;
   width: 260px;
@@ -49,8 +50,10 @@
   font-family: "Oswald", "Tahoma", sans-serif;
   font-size: 16px;
   line-height: 20px;
+  font-weight: 400;
   margin: 0;
   text-transform: uppercase;
+  color: #222222;
   width: 76px;
 }
 
@@ -58,6 +61,7 @@
 .catalog__info-value,
 .catalog__many-flavors {
   font-size: 12px;
+  color: #222222;
 }
 
 .catalog__block {
@@ -186,6 +190,7 @@
   margin: 0;
   margin-top: 16px;
   margin-bottom: 8px;
+  color: #222222;
 }
 
 .catalog__many-flavors {
@@ -225,7 +230,7 @@
     line-height: 60px;
     width: 440px;
     margin-bottom: 163px;
-    margin-top: 61px;
+    margin-top: 56px;
 
     &::after {
       background-color: #d9d9d900;
@@ -384,7 +389,7 @@
   }
 
   .catalog__title {
-    margin-top: 72px;
+    margin-top: 80px;
   }
 
   .catalog__item {
