--- a/source/less/blocks/how-it-works.less
+++ b/source/less/blocks/how-it-works.less
@@ -31,6 +31,7 @@
 .how-it-works__title {
   font-family: "Oswald", "Tahoma", sans-serif;
   font-size: 36px;
+  font-weight: 400;
   line-height: 40px;
   margin: 0;
   margin-top: 19px;
@@ -116,6 +117,7 @@
 
   .how-it-works__list {
     display: flex;
+    flex-wrap: wrap;
     gap: 60px 80px;
     margin-bottom: 69px;
   }
