--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,3 +1,4 @@
+@import "./blocks/fonts.less";
 @import "./blocks/main-header.less";
 @import "./blocks/container.less";
 @import "./blocks/promo.less";
@@ -9,32 +10,12 @@
 @import "./blocks/additional-goods.less";
 @import "./blocks/main-footer.less";
 @import "./blocks/program-selection.less";
-
-@font-face {
-  font-family: "Oswald";
-  font-style: normal;
-  font-weight: 400;
-  src: url("../fonts/oswald/oswaldregular.woff") format("woff2");
-  font-display: swap;
-}
-
-@font-face {
-  font-family: "Lato";
-  font-style: normal;
-  font-weight: 400;
-  src: url("../fonts/lato/Lato-Regular.woff") format("woff2");
-  font-display: swap;
-}
+@import "./blocks/footer.less";
 
 body {
   font-family: "Lato", "Tahoma", sans-serif;
   font-size: 14px;
   line-height: 18px;
-}
-
-footer {
-  background: #f2f2f2;
-  width: 100%;
 }
 
 .visually-hidden {
